# minitest-cli

./: .env.example  .gitignore  AGENTS.md  README.md  RELEASE.md  SKILL.md  install.ps1  install.sh  pyproject.toml  pyrightconfig.json  renovate.json
.github/workflows/: ci.yml  install-scripts.yml  release.yml
.opencode/skill/release/: SKILL.md
src/minitest_cli/: __init__.py  main.py  models.py
src/minitest_cli/api/: apps_manager_client.py  client.py
src/minitest_cli/assets/: callback.html
src/minitest_cli/commands/: app_knowledge.py  app_knowledge_helpers.py  apps.py  apps_dependencies.py  apps_helpers.py  auth.py  auth_api_key.py  batch.py  batch_helpers.py  build.py  build_helpers.py  env.py  env_helpers.py  flow.py  flow_helpers.py  flow_modify.py  flow_types.py  generate.py  generate_helpers.py  init.py  init_playbook.py  maintenance.py  maintenance_callbacks.py  maintenance_check.py  maintenance_helpers.py  maintenance_state.py  run.py  run_display.py  run_helpers.py  run_targets.py  skill.py  test_file.py  test_file_helpers.py  test_file_list.py  test_profile.py  test_profile_default.py  test_profile_helpers.py  test_profile_list.py  upgrade.py  user_story.py  (+15 more)
src/minitest_cli/core/: app_context.py  auth.py  config.py  credentials.py  oauth.py  tenants.py  token_exchange.py
src/minitest_cli/models/: __init__.py  app.py  app_env_vars.py  base.py  batch.py  build.py  flow_run.py  flow_template.py  maintenance_check.py  story_run.py  targets.py  user_story.py
src/minitest_cli/utils/: mermaid.py  output.py  skill_refresh.py  update_check.py
tests/: test_app_knowledge_commands.py  test_apps_commands.py  test_apps_dependencies.py  test_auth.py  test_auth_api_key.py  test_auth_commands.py  test_batch_commands.py  test_build_commands.py  test_code_quality.py  test_env.py  test_flow_commands.py  test_flow_types_commands.py  test_generate_commands.py  test_init_command.py  test_mermaid.py  test_run_commands.py  test_skill_command.py  test_test_file_commands.py  test_test_profile_commands.py  test_upgrade_command.py  test_user_story_bindings_commands.py  test_user_story_commands.py  test_verdicts.py  test_version.py
